--- a/src/index.css
+++ b/src/index.css
@@ -9,9 +9,7 @@
   font-display: swap;
   src: url("./assets/fonts/sf-pro/SFPRODISPLAYREGULAR.OTF") format("opentype");
   unicode-range: U+20, U+21, U+23, U+26-29, U+2C-33, U+35-38, U+3A, U+3F, U+41-57, U+61-7A, U+A9, U+E9, U+2013, U+2014,
-    U+2026, U+2AF6, U+1F44B;
-}
-
+    U+2026, U+2AF6, U+1F44B; }
 
 
 html {
